--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>Welcome to Live TV</h1>
     <p>Now streaming your favorite channel
-    make by Raj</p>
+    make by Astra</p>
 
     <!-- লাইভ টিভি প্লেয়ার -->
     <video id="liveTV" controls autoplay></video>
