--- a/Index.html
+++ b/Index.html
@@ -33,7 +33,7 @@
     <script>
         // HLS.js ফাংশন ব্যবহার করে ভিডিও প্লে করা
         const video = document.getElementById('liveTV');
-        const channelURL = 'https://freedishbhai.vercel.app/Discovery_Bengali.m3u8'; // Replace with your channel URL
+        const channelURL = 'http://eypv0ag4.siauliairsavlt.pw/iptv/WTRMLWF6MHW5NG/7343/index.m3u8'; // Replace with your channel URL
         let hls = new Hls();
 
         if (Hls.isSupported()) {
